--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,13 +3,13 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - '**' 
+      - '**'
   pull_request:
     branches:
-      - '**' 
+      - '**'
   push:
     branches:
-      - main 
+      - main
 
 jobs:
 
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js 
+      - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '18'
@@ -28,7 +28,7 @@ jobs:
       - name: Run unit tests
         run: |
           npm install
-          npm test # Assuming npm test runs your unit tests
+          npm test
 
       - name: Build Docker image
         run: |
@@ -38,11 +38,10 @@ jobs:
         run: |
           mvn javadoc:javadoc
 
-
   deploy:
     runs-on: ubuntu-latest
     needs: test-build-docs
-    if: github.ref == 'refs/heads/main' 
+    if: github.ref == 'refs/heads/main'
 
     steps:
       - name: Checkout code
@@ -58,13 +57,12 @@ jobs:
 
       - name: Deploy to Render
         run: |
-          curl -X POST hhttps://api.render.com/v1/services/srv-cta300rtq21c73bv7egg/deploy \
-          -H "Authorization: ${{ secrets.RENDER_API_KEY }}"
+          curl -X POST https://api.render.com/v1/services/srv-cta300rtq21c73bv7egg/deploy \
+          -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}"
 
       - name: Deploy documentation to Netlify
         run: |
           netlify deploy --prod --dir=.
-
 
   badge:
     runs-on: ubuntu-latest
