--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -71,8 +71,8 @@ jobs:
       - name: Add workflow status badge to README
         run: |
           echo "![CI/CD Status](https://img.shields.io/github/workflow/status/${{ github.repository }}/CI/CD%20Pipeline?label=CI%2FCD%20Status)" >> README.md
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "Zaouich123"
+          git config --global user.email "etienne.baillie@gmail.com"
           git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git
           git add README.md
           git commit -m "Update README with CI/CD status badge"
