--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This app is simple. It connects to a postgres database and says if the database works.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
