--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,15 +18,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          node-version: '18'
+          java-version: '11'
+
+      - name: Install dependencies
+        run: |
+          mvn install
 
       - name: Run unit tests
         run: |
-          npm install
-          npm test
+          mvn test
 
       - name: Build Docker image
         run: |
@@ -77,6 +80,3 @@ jobs:
           git add README.md
           git commit -m "Update README with CI/CD status badge"
           git push origin main
-
-
-
