--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,11 +18,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up JDK 11
+      - name: Set up JDK 11 (Eclipse OpenJ9)
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adoptopenjdk'
+          java-package: 'jdk'
 
       - name: Install dependencies
         run: |
