--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # example netlify.toml
 [build]
-  command = "mvn clean package"
+  command = "bash install_maven.sh && mvn clean package"
   functions = "netlify/functions"
   publish = ""
 
